# docwise

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  app.py  cliff.toml  compliance_100.sh  database.py  export.py  image_processing.py  main.py  ocr.py  parser.py  parser_backup.py  pyproject.toml  requirements.txt  speckit.md  styles.css  test_pipeline.py
.specify/: constitution.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
specs/001-compliance/: spec.md
specs/001-docwise/: spec.md
specs/001-docwise-compliance/: spec.md
specs/002-compliance-hardening/: spec.md
tests/: test_main.py
