[project]
name="docwise"
version="0.1.0"
description="DocWise AI project"
readme="README.md"
requires-python=">=3.10"
license={text="AGPL-3.0-only"}

[tool.ruff]
line-length=100

[tool.mypy]
ignore_missing_imports=true

[tool.pytest.ini_options]
testpaths=["tests"]
addopts="--cov=. --cov-report=term-missing --cov-fail-under=1"
