[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docwise"
version = "0.1.0"
description = "Local document and receipt processing utilities with OCR, parsing, export, and compliance automation."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "DocWise Maintainers" }]
keywords = ["ocr", "documents", "receipts", "compliance", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "opencv-python-headless>=4.10",
  "pandas>=2.2",
  "pdfplumber>=0.11",
  "pillow>=10.4",
  "plotly>=5.22",
  "pymupdf>=1.24",
  "pytesseract>=0.3",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7",
  "coverage[toml]>=7.6",
  "flake8>=7.1",
  "mypy>=1.11",
  "pip-audit>=2.7",
  "pre-commit>=3.8",
  "pylint>=3.2",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pyupgrade>=3.17",
  "ruff>=0.6",
  "semgrep>=1.82",
  "vulture>=2.11",
]

[tool.setuptools]
py-modules = ["app", "database", "export", "image_processing", "main", "ocr", "parser"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "reports",
  "sample_receipts",
  "uploads",
  "venv",
  "parser_backup.py",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "S", "SIM", "UP", "W"]
ignore = [
  "S101",
  "S311",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"test_pipeline.py" = ["S101"]
"app.py" = ["B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = [
  "app.py",
  "database.py",
  "export.py",
  "image_processing.py",
  "main.py",
  "ocr.py",
  "parser.py",
  "tests",
  "test_pipeline.py",
]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "test_pipeline.py"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=.",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=50",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
  ".git/*",
  ".venv/*",
  "venv/*",
  "tests/*",
  "test_pipeline.py",
  "parser_backup.py",
  "app.py",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = [
  ".git",
  ".venv",
  "venv",
  "tests",
  "reports",
  "sample_receipts",
  "uploads",
]
skips = ["B101", "B311"]

[tool.pylint.main]
py-version = "3.12"
jobs = 0
ignore = ["venv", ".venv", ".git", "reports", "sample_receipts", "uploads"]
ignore-patterns = ["parser_backup.py"]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "too-few-public-methods",
  "invalid-name",
  "duplicate-code",
]

[tool.pylint.format]
max-line-length = 88

[tool.vulture]
exclude = ["venv/", ".venv/", "reports/", "uploads/", "sample_receipts/", "parser_backup.py"]
ignore_decorators = ["@st.cache_data", "@st.cache_resource"]
min_confidence = 80
paths = ["."]
sort_by_size = true

[tool.pip-audit]
requirement = ["requirements.txt"]
progress-spinner = "off"
